# Creative-OS

./: .env.example  .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
quant/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD_PLAN.md  INICIAR_MINERO.bat  INICIAR_MINERO.command  INSTALAR.bat  INSTALAR.command  MINAR_VARIOS.bat  README.md  SETUP.md  docker-compose.yml  install_desktop.py  pyproject.toml
quant/.github/workflows/: ci.yml
quant/.streamlit/: config.toml
quant/docs/: DATA_INFRASTRUCTURE.md
quant/examples/: quickstart.py
quant/quantos/: __init__.py  cli.py  config.py  pipeline.py  testing.py
quant/quantos/anomaly/: __init__.py  base.py  detectors.py
quant/quantos/backtest/: __init__.py  baselines.py  engine.py  forward.py  metrics.py  monte_carlo.py  scorecard.py  validation.py  walk_forward.py
quant/quantos/committee/: __init__.py  analysts.py  base.py  calibration.py  chair.py  challenger.py  committee.py  confidence.py  debate.py  decision.py  llm.py  risk_manager.py
quant/quantos/dashboard/: __init__.py  app.py  demo.py  launch.py  panels.py
quant/quantos/data/: __init__.py  catalog.py  collector.py  featurestore.py  forex.py  lake.py  models.py
quant/quantos/execution/: __init__.py  costs.py  interfaces.py
quant/quantos/explain/: __init__.py  explainer.py
quant/quantos/features/: __init__.py  indicators.py  regime_features.py
quant/quantos/hermes/: __init__.py  agent.py  base.py  channels.py
quant/quantos/knowledge/: __init__.py  base.py  graph.py
quant/quantos/learning/: __init__.py  audit.py  self_eval.py
quant/quantos/live/: __init__.py  paper.py
quant/quantos/llm/: __init__.py  client.py
quant/quantos/memory/: __init__.py  archive.py  base.py  rag.py
quant/quantos/meta/: __init__.py  base.py  learner.py
quant/quantos/mining/: __init__.py  (+3 more)
quant/tests/: conftest.py  test_analysts.py  test_anomaly.py  test_archive.py  test_audit.py  test_backtest.py  test_calibration.py  test_challenger.py  test_cli.py  test_cli_lake.py  test_committee.py  test_confidence.py  test_confidence_and_risk.py  test_connector_market.py  test_connectors_channels.py  test_connectors_registry.py  test_costs.py  test_dashboard_import.py  test_data.py  test_debate.py  test_evolution.py  test_experiments.py  test_explain.py  test_featurestore.py  test_forex.py  test_forward.py  test_generator.py  test_hermes.py  test_hypotheses.py  test_indicators.py  test_ingest_runner.py  test_install_desktop.py  test_invariants_property.py  test_knowledge.py  test_lab.py  test_lake.py  test_live.py  test_llm_analyst.py  test_llm_client.py  test_market_sim.py  (+22 more)
quant/tools/: make_icon.py
(+138 files in other folders)
