[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantos"
version = "0.1.0"
description = "AI quant research platform: multi-agent investment committee, validated research funnel, paper trading only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
data = [
    "ccxt",
    "duckdb",
    "pyarrow",
]
research = [
    "duckdb",
    "pyarrow",
]
ml = [
    "scikit-learn",
    "hmmlearn",
]
llm = [
    "anthropic",
    "langfuse",
    "langgraph",
]
dashboard = [
    "streamlit",
]
obs = [
    "mlflow",
    "prometheus-client",
]
dev = [
    "pytest",
    "hypothesis",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
quantos = "quantos.cli:main"
quantos-app = "quantos.dashboard.launch:main"

[tool.setuptools.packages.find]
include = ["quantos*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.mypy]
python_version = "3.10"
files = ["quantos"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
